log/build_2023-09-29_16-57-47/my_py_pkg/stderr.log
  File "/home/thieulong/ROS2-WorkSpace/install/my_py_pkg/lib/python3.10/site-packages/my_py_pkg/my_first_node.py", line 15
    self.get_logger().info("Hello" str(self.counter_))
                           ^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

